# digital-twin-mcp

./: .gitignore  LICENSE  README.md  jlowin-fastmcp.txt
jlowin-fastmcp/: README.md  config.yaml  pyproject.toml
jlowin-fastmcp/examples/: digital_twin_example.py
jlowin-fastmcp/src/fastmcp/digital_twin/: interaction.py  memory.py  personality.py  response_generator.py  sentiment.py  server.py
jlowin-fastmcp/src/fastmcp/digital_twin/llm/: base.py  factory.py  langchain_wrapper.py  openai_llm.py
jlowin-fastmcp/src/fastmcp/digital_twin/prompts/: base_personality.txt  manager.py  memory_update.txt  reflection.txt  reply_simulation.txt
